chatroom complete index.js index.html chat.js

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 
                 <div id="chat">
                     <div class="card">
-                        <div id="messages" class="card-block">
-                        </div>
-                    </div>
+                        <div id="messages" class="card-block" style="overflow:auto;">
+                        </div> 
+                    </div> 
                     <br> 
                     <input type="text" id="username" class="form-control" placeholder="Your name...">
                     <br>
